k8s/microservice/template-virtualservice.yaml
apiVersion: networking.istio.io/v1alpha3
kind: VirtualService
metadata:
  name: $k8sapplicationname
  namespace: $k8snamespace
spec:
  hosts:
  - "$k8shostapim"
  - "$k8shostaks"
  gateways:
  - default/$k8sgateway
  http:
  - match:
    - uri:
        prefix: /$k8sapplicationname/
    route:
    - destination:
        host: $k8sapplicationname.$k8snamespace.svc.cluster.local
        port:
          number: 8080
      headers:
        response:
          set:
            Strict-Transport-Security: max-age=31536000; includeSubDomains
